<?xml version="1.0"?>
<package>
  <name>concert_conductor_graph_web</name>
  <version>0.0.0</version>
  <description>
    Visualise conductor graph in web browser
  </description>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rocon_web_common</build_depend>
  <run_depend>rocon_web_common</run_depend>

  <export>
  </export>
</package>
