<?xml version="1.0"?>
<package>
  <name>concert_delivery_monitor</name>
  <version>0.0.0</version>
  <description>
    concert delivery monitor
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <author>Jihoon Lee</author> 
  <author>Dongwook Lee</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
