<?xml version="1.0"?>
<package>
  <name>pickup_delivery_order</name>
  <version>0.0.0</version>
  <description>
    Pick delivery order application
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <author>Jihoon Lee</author> 
  <author>Dongwook Lee</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
